Opened 12 years ago
Closed 12 years ago
#3930 closed defect (fixed)
latest ffmpeg failed to decode the aac audio
| Reported by: | wanezhiling | Owned by: | Benoit Fouet |
|---|---|---|---|
| Priority: | normal | Component: | avcodec |
| Version: | git-master | Keywords: | aac |
| Cc: | Blocked By: | ||
| Blocking: | Reproduced by developer: | yes | |
| Analyzed by developer: | no |
Description
https://www.sendspace.com/file/iyaw92
Has been confirmed by mpc-be's author.
Change History (5)
follow-up: 2 comment:1 by , 12 years ago
comment:2 by , 12 years ago
Replying to cehoyos:
Please provide your failing command line together with the complete, uncut console output to make this a valid ticket.
I know nothing about ffmpeg.
I just used mpc-be (a directshow player based on ffmpeg) to play it and failed.. and mpc-be author told me this is a ffmpeg bug and suggested me to report here.
comment:3 by , 12 years ago
| Component: | undetermined → avcodec |
|---|---|
| Reproduced by developer: | set |
| Status: | new → open |
| Version: | unspecified → git-master |
comment:4 by , 12 years ago
| Owner: | set to |
|---|
comment:5 by , 12 years ago
| Keywords: | aac added |
|---|---|
| Resolution: | → fixed |
| Status: | open → closed |
Fixed by Benoit Fouet in 4da7111eb8382c9fa5b464c0a62d12d497f7018a
Note:
See TracTickets
for help on using tickets.



Please provide your failing command line together with the complete, uncut console output to make this a valid ticket.