avcodec/aacdec: map LFE[0] to SCE[1] for 4.0 audio.

Fixes ticket #3930

Signed-off-by: Michael Niedermayer <michaelni@gmx.at>